Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26626

InnoDB fails to advance the log checkpoint

    XMLWordPrintable

Details

    Description

      In buf_flush_page_cleaner(), we may fail to advance the log checkpoint. I suppose that we may end up with an empty buf_pool.flush_list and a very old checkpoint age if the last page was written out by LRU eviction, or something like that.

      This was detected by hangs of the tests innodb_gis.rtree_compress and innodb.undo_truncate in the bb-10.6-MDEV-26356 branch. The reason of the failure is that with MDEV-26356, we would skip purge altogether if the redo log capacity has been reached.

      Failure to advance the checkpoint will cause unnecessary extra work on crash recovery or in backup. I suppose that this mostly affects an idle server.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25h
                  0.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.