MDEV-26626 fixup: Do not advance checkpoint during startup

While the redo log is being resized in srv_start(),
we must not write checkpoint information to the old log.

Thanks to Matthias Leich for noticing this.